--- a/asset/style/header.css
+++ b/asset/style/header.css
@@ -10,8 +10,8 @@ h1{
 
 header .summary-box{
     margin-top: 6.5rem;
-    margin-left: 10rem;
-    padding: 1rem 2rem 2rem 2.9rem; 
+    margin-left: 12rem;
+    padding: 3vh 2vw 6vh 3vw; 
     display: flex;
     flex-direction: column;
     width: 40vw;
@@ -42,6 +42,7 @@ header .home-devis-box{
     height: 50vh;
     border-radius: 5rem 2rem 5rem 2rem;
     margin: 4rem 0 0 8rem;
+    padding: 2vh 0.6vw 3vh 1vw ;
 }
 
 header .home-devis-box h1{
@@ -90,4 +91,6 @@ header .home-devis-box p{
     font-size: 0.6rem;
     color: white;
 }
+
+
 
