--- a/asset/style/main.css
+++ b/asset/style/main.css
@@ -1,6 +1,30 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body{
-    width: 100vw;
     margin: 0;
     padding: 0;
     font-family: Popins, sans-serif;
+}
+
+::-webkit-scrollbar {
+    width: 7px; 
+}
+
+::-webkit-scrollbar-track {
+    background: #ffffff; 
+}
+
+::-webkit-scrollbar-thumb {
+    background: #bababa;     
+    border-radius: 90px;    
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
+p span{
+    color: #38b6ff;
 }
