--- a/asset/style/nav.css
+++ b/asset/style/nav.css
@@ -1,9 +1,10 @@
 nav{
     display: flex;
     flex-direction: row;
-    margin: 2rem 2rem 0 2rem;
+    margin: 2rem 1rem 0 2rem;
     align-items: center;
     justify-content: space-between;
+    padding: 0 2rem 0 2rem;
 }
 
 nav div a img{
