--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -1,3 +1,5 @@
 @import url(main.css);
 @import url(nav.css);
-@import url(header.css)
+@import url(header.css);
+@import url(nous.css);
+@import url(footer.css);
