--- a/asset/style/footer.css
+++ b/asset/style/footer.css
@@ -4,7 +4,7 @@ footer{
     align-items: center;
     justify-content: space-around;
     margin-top: 20vh;
-    background-color: rgb(254, 250, 250);
+    background-color: rgb(251, 249, 249);
     height: 10vh;
     font-size: 0.9rem
 
@@ -58,6 +58,31 @@ footer div button:hover{
     background-color: #ffffff;
     color: rgb(0, 0, 0);
     border: #38b6ff solid 2px;
+}
+
+footer div .social{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+
+}
+
+footer div .social li{
+    margin-top: 0.5vh;
+}
+
+footer div .social li img{
+    width: 2vw;
+}
+
+footer .rightfooter-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 
