--- a/asset/style/header.css
+++ b/asset/style/header.css
@@ -3,7 +3,7 @@ h1 span{
 }
 
 h1{
-    font-size: 2rem;
+    font-size: 2.14rem;
     font-weight: 600;
     
 }
@@ -15,7 +15,7 @@ header .summary-box{
     display: flex;
     flex-direction: column;
     width: 40vw;
-    height: 30vh;
+    height: 14vw;
     border: 3px solid #38b6ff;
     border-radius: 5rem 2rem 5rem 2rem;
 }
@@ -28,7 +28,7 @@ header{
 
 header .summary-box p{
     margin: 0;
-    font-size: 1rem;
+    font-size: 1.07vw;
     font-weight: 550;
     
 }
@@ -39,41 +39,58 @@ header .home-devis-box{
     align-items: center;
     background-color: #38b6ff;
     width: 20vw;
-    height: 50vh;
+    height: 30vw;
     border-radius: 5rem 2rem 5rem 2rem;
-    margin: 4rem 0 0 8rem;
+    margin: 2rem 0 0 8rem;
     padding: 2vh 0.6vw 3vh 1vw ;
 }
 
 header .home-devis-box h1{
-    font-size: 1.4rem;
+    font-size: 1.24vw;
     font-weight: 550;
     color: white;
-    padding: 1.3rem 0 0 0;
+    padding: 0 0 0 0;
+}
+
+header .home-devis-box .devis{
+    margin-top: 0.5vw;
+    width: 7vw;
 }
 
 header .home-devis-box div p{
-    margin: 0;
-    font-size: 1rem;
-    padding: 0 0.4rem 0;
+    margin: 0 0 0.5rem 0;
+    font-size: 1.13vw;
+    padding: 0 0 0 0;
     font-weight: 550;
     color: white;
 }
 
+
+header .home-devis-box div .free{
+    position: absolute;
+    width: 5vw;
+    margin: 6.6vw 0 0 10.9vw ;
+}
+
 header .home-devis-box div{
-    padding-top: 5rem;
+    padding-top: 4vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+header .home-devis-box .confiance{
+    width: 6vw;
+    margin-top: 3vw;
+}
+
 header .home-devis-box button{
-    margin-top: 5.5rem;
+    margin-top: 2vw;
     background-color: white;
     color: black;
     border: none;
-    padding: 0.6rem 2rem;
+    padding: 0.7vw 4vw 0.7vw 4vw;
     border-radius: 5rem 2rem 5rem 2rem;
     cursor: pointer;
     font-weight: 600;
