--- a/asset/style/nous.css
+++ b/asset/style/nous.css
@@ -13,7 +13,7 @@ main .wetitle-box div{
     padding: 2vh 5vw 2vh 5vw;
 }
 
-main .wetitle-box h1{
+main .wetitle-box h2{
     font-size: 2;
     font-weight: 550;
     color: black;
@@ -29,16 +29,18 @@ main .wecontent .wecontenthight .wemotivation-box p{
     text-align: center;
     width: 18vw;
     font-weight: 550;
+    font-size: 1.13vw;
 }
 
 
 main .wecontent .wecontenthight .wemotivation-box{
     border: 3px solid #38b6ff;
     width: 20vw;
-    height: 35vh;
+    height: 17.5vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 10px;
 }
 
 main .wecontent .wecontenthight{
@@ -58,17 +60,19 @@ main .wecontent .wecontenthight .westudent-box{
     margin-left: 5px;
     border: 3px solid #38b6ff;
     width: 20vw;
-    height: 35vh;
+    height: 17.5vw;
+    border-radius: 10px;
 }
 
 main .wecontent .wecontentlower{
     border: 3px solid #38b6ff;
     width: 20vw;
-    height: 35vh;
+    height: 17.5vw;
     margin-top: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 
 main .wecontent .storm{
@@ -97,13 +101,14 @@ main .wecontent .wecontenthight .westudent-box p{
     text-align: center;
     width: 18vw;
     font-weight: 550;
+    font-size: 1.11vw;
 }
 
 
 main .wecontent .wecontenthight .westudent-box{
     border: 3px solid #38b6ff;
     width: 20vw;
-    height: 35vh;
+    height: 17.5vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -113,6 +118,7 @@ main .wecontent .wecontentlower p{
     text-align: center;
     width: 18vw;
     font-weight: 550;
+    font-size: 1.13vw;
 }
 
 
