--- a/asset/style/footer.css
+++ b/asset/style/footer.css
@@ -85,4 +85,11 @@ footer .rightfooter-box{
     align-items: center;
 }
 
+@media screen and (max-width:960px) {
+    footer{
+        flex-direction: column;
+    }
+    
+}
+
 
