--- a/asset/style/nav.css
+++ b/asset/style/nav.css
@@ -1,10 +1,10 @@
 nav{
     display: flex;
     flex-direction: row;
-    margin: 2rem 1rem 0 2rem;
+    margin: 2vw 1vw 0 2vw;
     align-items: center;
     justify-content: space-between;
-    padding: 0 2rem 0 2rem;
+    padding: 0 2vw 0 2vw;
 }
 
 nav div a img{
@@ -49,4 +49,28 @@ nav ul li button:hover{
     background-color: white;
     color: black;
     
+}
+
+nav .menuham{
+    display: none;
+}
+
+@media screen and (max-width:960px) {
+    nav{
+        margin-top: 2vh;   
+    }
+
+    nav div a img{
+        width: 12vh
+    }
+    
+    nav ul{
+        display: none;
+    }
+
+    nav .menuham{
+        display: block;
+        cursor: pointer;
+        width: 3vh;
+    }
 }
