--- a/asset/style/footer.css
+++ b/asset/style/footer.css
@@ -87,6 +87,7 @@ footer .rightfooter-box{
 
 @media screen and (max-width:960px) {
     footer{
+        margin-top: 10vh;
         flex-direction: column;
     }
     
