--- a/asset/style/header.css
+++ b/asset/style/header.css
@@ -1,175 +1,35 @@
-h1 span{
-    color: #38b6ff;
-}
-
-h1{
-    font-size: 2.14vw;
-    font-weight: 600;
-    
-}
-
-header .summary-box{
-    margin-top: 7vw;
-    margin-left: 12vw;
-    padding: 3vh 2vw 6vh 3vw; 
-    display: flex;
-    flex-direction: column;
-    width: 40vw;
-    height: 14vw;
-    border: 3px solid #38b6ff;
-    border-radius: 5rem 2rem 5rem 2rem;
-}
-
 header{
     display: flex;
-    margin: 4vw 2vw 0 2vw;
-}
-
-header .summary-box p{
-    margin: 0;
-    font-size: 1.07vw;
-    font-weight: 550;
-    
-}
-
-header .home-devis-box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #38b6ff;
-    width: 20vw;
-    height: 30vw;
-    border-radius: 5rem 2rem 5rem 2rem;
-    margin: 2rem 0 0 8rem;
-    padding: 2vh 0.6vw 3vh 1vw ;
-}
-
-header .home-devis-box h1{
-    font-size: 1.24vw;
-    font-weight: 550;
-    color: white;
-    padding: 0 0 0 0;
-}
-
-header .home-devis-box .devis{
-    margin-top: 0.5vw;
-    width: 7vw;
-}
-
-header .home-devis-box div p{
-    margin: 0 0 0.5rem 0;
-    font-size: 1.13vw;
-    padding: 0 0 0 0;
-    font-weight: 550;
-    color: white;
-}
-
-
-header .home-devis-box div .free{
-    position: absolute;
-    width: 5vw;
-    margin: 6.6vw 0 0 10.9vw ;
-}
-
-header .home-devis-box div{
-    padding-top: 4vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    margin-top: 4vw;
 }
 
-header .home-devis-box .confiance{
-    width: 6vw;
-    margin-top: 3vw;
+header #headerbox{
+    background-image: url("../img/backgroundheader1.png");
+    background-size: cover; /* pour couvrir toute la div */
+    background-position: center; /* pour centrer l'image */
+    display: flex;
+    width: 90vw;
+    height: 70vh;
+    border: 4px solid rgb(252, 251, 251);
+    border-radius: 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    justify-content: space-around;
 }
 
-header .home-devis-box button{
-    margin-top: 2vw;
-    background-color: white;
-    color: black;
-    border: none;
-    padding: 0.7vw 4vw 0.7vw 4vw;
-    border-radius: 5rem 2rem 5rem 2rem;
-    cursor: pointer;
-    font-weight: 600;
-    transition: 0.2s ease;
-    border: white solid 2px;
-}
-
-header .home-devis-box button:hover{
-    background-color: #38b6ff;
-    color: white;
-}
-
-header .home-devis-box p{
-    margin: 0.2rem 0 0 0;
-    font-size: 0.6rem;
-    color: white;
+header #headerbox #telephone-box div{
+    height: 32vw;
+    width: 15.5vw;
+    background-image: url('../img/telephone1.png');
+    background-size: cover; /* pour couvrir toute la div */
+    background-position: bottom; /* pour centrer l'image */
 }
 
 
-@media screen and (max-width:960px) {
-    h1{
-       font-size: 5.14vh;
-       text-align: center;
-       margin: 0 0 0.8vh 0;
-       padding: 0 0 0 0;
-    }
-
-    header{
-        flex-direction: column-reverse;
-        margin: 9vh 0 0 0;
-        padding: 0;
-        align-items: center;
-    }
-
-    header .summary-box{
-        justify-content: center;
-        width: 42vh;
-        height: 60vh;
-        margin: 3vh 0 0 0;
-        padding: 0 1vh 0 1vh;
-    }
-
-    header .summary-box p{
-        margin-top: 0.8vh;
-        font-size: 2vh;
-        text-align: center;
-    }
-
-    header .home-devis-box{
-        width: 42vh;
-        height: 60vh;
-        margin: 24vh 0 0 0;     
-        padding: 0 1vh 0 1vh;
-    }
-
-    header .home-devis-box div p{
-        margin-top: 0.8vh;
-        font-size: 2.3vh;
-        text-align: center;
-    }
-
-    header .home-devis-box .devis{
-        margin-top: 2vh;
-        width: 15vh;
-    }
-
-    header .home-devis-box h1{
-        font-size: 2.9vh;
-        margin-top: 4vh;
-    }
-
-    header .home-devis-box .confiance{
-        width: 13vh;
-        margin-top: 5vh;
-    }
-
-    header .home-devis-box button{
-        margin-top: 6vh;
-        padding: 0.7vh 4vh 0.7vh 4vh;
-    }
+header #headerbox #telephone-box{
+    display: flex;
+    justify-content: center;
+    align-items: end;
 }
 
 
