--- a/asset/style/nous.css
+++ b/asset/style/nous.css
@@ -52,3 +52,12 @@
     margin: 2vh 0 2vh 0;
     border-radius: 15px;
 }
+
+.wecontent .wecontent-spacebox img{
+    margin: 0.2vh 0 2.5vh 0;
+}
+
+.wecontent div:hover{
+    transform: scale(1.01);
+}
+
