--- a/asset/style/project.css
+++ b/asset/style/project.css
@@ -1,120 +1,78 @@
 #project{
     display: flex;
     flex-direction: column;
-    margin-top: 10vw;
+    align-items: center;
+    margin-top: 5vw;
 }
-.project-object{
+
+.titleproject{
+    display: flex;
+    justify-content: center;
+    margin-top: 5vw;
+}
+
+.titleproject h1{
+    font-size: 2.5vw;
+}
+
+.project-content{
+    display: flex;
+    margin-top: 2vw;
+    justify-content: space-around;
+    background-image: url("../img/backgroundheader1.png");
+    background-size: cover; /* pour couvrir toute la div */
+    background-position: center; /* pour centrer l'image */
+    align-items: center ;
+    height: 70vh;
+    width: 90vw;
+    border-radius: 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    border: 4px solid rgb(252, 251, 251);
+}
+
+.project-content video{
+    width: 35vw;
+}
+
+.project-content div p{
+    text-align: center;
+    
+}
+
+.project-content div{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 30vw;
 }
 
-.project-object button{
-    margin-top: 2vw;
+.project-content div h1{
+    font-size: 3vw;
+    margin: 0 0 0.8vh 0;
+    padding: 0;
+}
+
+.project-content .video-box .button-play{
     background-color: #38b6ff;
     color: white;
     border: none;
-    padding: 0.7vw 4vw 0.7vw 4vw;
+    padding: 0.6rem 2rem;
     border-radius: 5rem 2rem 5rem 2rem;
     cursor: pointer;
     font-weight: 600;
     transition: 0.2s ease;
-    border: white solid 2px;
+    border: #38b6ff solid 2px;    
+    margin-top: 8vh;
 }
 
-.project-object button:hover{
+.project-content .video-box .button-play:hover{
     background-color: white;
     color: black;
-    border: #38b6ff solid 2px;
 }
 
-.project-object video{
-    width: 35vw;
+.project-content .video-box .video:hover{
+    transform: scale(1.01);
 }
 
-#project .project-header-box{
-    border: 3px solid #38b6ff;
-    width: 35vw;
-    height: 20vw;
-    border-radius: 120px 40px 120px 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-#project .project-content{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
 
-#project .title-project div{
-    margin: 0 3vw 0 3vw;
-    border: 3px solid #38b6ff;
-    border-radius: 20px;
-    width: 23vw;
-    height: 3.5vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#project .title-project{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 7vw;
-}
-
-#project .title-project div h1{
-    margin: 0;
-    padding: 0;
-    font-size: 1.7vw;
-}
-
-#project .project-content .project-header-box p{
-    text-align: center;
-    width: 32vw;
-    font-weight: 550;
-    font-size: 1.11vw;
-}
-
-@media screen and (max-width:960px) {
-    #project{
-        margin-top: 10vh;
-    }
-    #project .title-project div{
-        width: 23vh;
-        height: 4.5vh;
-    }
-
-    #project .title-project div h1{
-        font-size: 2.5vh;
-    }
-
-    #project .project-content{
-        flex-direction: column;
-        margin-top: 4vh
-    }
-
-    #project .project-content .project-header-box{
-        width: 42vh;
-        height: 50vh;
-        border-radius: 60px;
-    }
-
-    #project .project-content .project-header-box p{
-        width: 37vh;
-        font-size: 1.9vh;
-    }
-
-    #project .project-object video{
-        margin-top: 4vh;
-        width: 42vh;
-    }
-
-    #project .project-object button{
-        margin-top: 4vh;
-        padding: 1vh 4vh 1vh 4vh;
-    }
-}
