--- a/asset/style/nous.css
+++ b/asset/style/nous.css
@@ -61,3 +61,29 @@
     transform: scale(1.01);
 }
 
+@media screen and (max-width:1100px) {
+    .titlewe h1{
+        font-size: 4vh;
+    }
+
+    .wecontent{
+        flex-direction: column;
+        height: 100vh;
+        background-image: url("../img/backgroundheader2tel.png");
+    }
+
+    .wecontent div{
+        width: 37vh;
+        height: 34vh;
+        margin: 0.7vh 0 0.7vh 0;
+    }
+
+    .wecontent div img{
+        width: 26vh;
+    }
+
+    .wecontent div p{
+        font-size: 1.4vh;
+    }
+}
+
