--- a/asset/style/project.css
+++ b/asset/style/project.css
@@ -46,7 +46,7 @@
     width: 30vw;
 }
 
-.project-content div h1{
+.project-content div h2{
     font-size: 3vw;
     margin: 0 0 0.8vh 0;
     padding: 0;
@@ -68,10 +68,46 @@
 .project-content .video-box .button-play:hover{
     background-color: white;
     color: black;
+    border: #38b6ff solid 2px;    
+
 }
 
 .project-content .video-box .video:hover{
     transform: scale(1.01);
+}
+
+@media screen and (max-width:960px) {
+    .titleproject h1{
+        font-size: 4vh;
+    }
+
+    .project-content{
+        flex-direction: column;
+        background-image: url("../img/backgroundheader1tel.png");
+    }
+
+    .project-content video{
+        width: 37vh;
+        margin-top: 3vh;
+    }
+
+    .project-content .video-box .button-play{
+        padding: 0.4rem 2rem;
+        margin-top: 5vh;
+    }
+
+    .project-content div h2{
+        font-size: 2.9vh;
+    }
+
+    .project-content div p{
+        font-size: 1.7vh;
+    }
+
+    .project-content div{
+        width: 37vh;
+    }  7
+    
 }
 
 
